# uuid-cli

./: Cargo.toml
src/: main.rs
